added projects placeholder

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "",
   "keywords": [],
   "author": "Manuel Bieh <node@manuelbieh.de> (https://github.com/manuelbieh)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^1.17.1"
+  }
 }
