--- a/data/de/projects.json
+++ b/data/de/projects.json
@@ -41,6 +41,7 @@
     },
     {
       "title": "Klarna.",
+      "hidden": true,
       "role": "Freelance Frontend Consultant",
       "image": "klarna.svg",
       "date": "April 2018",
