--- a/data/en/projects.json
+++ b/data/en/projects.json
@@ -17,7 +17,7 @@
       "text": [
         "In my role as Technical Frontend Lead for BSDEX, a spinoff of Börse Stuttgart (Stuttgart Stock Exchange), my first task was coordinating the handover of their trading web platform as it was passed from an external service provider to an internal team. Following the handover I continued as an active member of the team, developing new features and continuously improving the adopted codebase."
       ],
-      "image": "boersestuttgart.svg",
+      "image": "boerse-stuttgart.svg",
       "tech": "JavaScript, TypeScript, ES2015+, React, Hooks, Redux, Jest, React Testing Library, Styled Components, Webpack, i18n, REST, Websockets"
     },
     {
