chore: localize book

--- a/data/de/projects.json
+++ b/data/de/projects.json
@@ -2,10 +2,10 @@
   "stage": {
     "title": "React lernen und verstehen",
     "date": "April 2019",
-    "image": "react-book-portrait-white-medium.jpg",
+    "image": "react-lernen-cover.jpg",
     "text": [
       "Nach über 3 Jahren in der täglichen Arbeit mit React in über 15 Projekten, in Teams unterschiedlicher Art, Größe und Zusammensetzung und für Unternehmen aus den verschiedensten Branchen, vom Startup bis zum Großkonzern wollte ich meine Erfahrungen aus dieser Zeit gern weitergeben.",
-      "Aus diesem Grund entschied ich mich Anfang 2018 ein Buch zu schreiben, welches ich im April 2019 mit über 300 Seiten veröffentlicht habe."
+      "Aus diesem Grund entschied ich mich Anfang 2018 ein Buch zu schreiben, welches ich im April 2019 mit über 340 Seiten veröffentlicht habe."
     ]
   },
   "items": [
