--- a/data/de/projects.json
+++ b/data/de/projects.json
@@ -10,6 +10,16 @@
   },
   "items": [
     {
+      "title": "Gymondo",
+      "role": "Freelance JavaScript Consultant",
+      "date": "April 2021 – November 2021",
+      "text": [
+        "Bei Gymondo war ich hauptsächlich dafür verantwortlich verschiedene React Codebases auf den neuesten Stand der Technik. Es existierten unterschiedliche Projekte die hauptsächlich auf Create React App, Gatsby oder Storybook basierten und hinsichtlich Buildzeiten, Wartbarkeit und Entwickler-Produktivität. Anschließend entwickelte ich in einem ihrer Projektteams neue Features auf basis der aktualisierten Architektur."
+      ],
+      "image": "gymondo.svg",
+      "tech": "JavaScript, TypeScript, ES2015+, React, Redux, Gatsby, Jest, React Testing Library, Scss, Webpack, i18n, REST"
+    },
+    {
       "title": "Börse Stuttgart Digital Exchange",
       "role": "Freelance Technical Frontend Lead",
       "date": "December 2019 – October 2020",
