fix: correct many typos

--- a/data/de/projects.json
+++ b/data/de/projects.json
@@ -14,7 +14,7 @@
       "role": "Freelance JavaScript Consultant",
       "date": "April 2021 – November 2021",
       "text": [
-        "Bei Gymondo war ich hauptsächlich dafür verantwortlich verschiedene React Codebases auf den neuesten Stand der Technik. Es existierten unterschiedliche Projekte die hauptsächlich auf Create React App, Gatsby oder Storybook basierten und hinsichtlich Buildzeiten, Wartbarkeit und Entwickler-Produktivität. Anschließend entwickelte ich in einem ihrer Projektteams neue Features auf basis der aktualisierten Architektur."
+        "Bei Gymondo war ich dafür verantwortlich verschiedene React Codebases auf den neuesten Stand der Technik zu bringen. Es existierten unterschiedliche Projekte die auf Create React App, Gatsby oder Storybook basierten und hinsichtlich Buildzeiten, Wartbarkeit und Entwickler-Produktivität optimiert werden sollten. Anschließend entwickelte ich in einem ihrer Projektteams neue Features."
       ],
       "image": "gymondo.svg",
       "tech": "JavaScript, TypeScript, ES2015+, React, Redux, Gatsby, Jest, React Testing Library, Scss, Webpack, i18n, REST"
