--- a/data/en/projects.json
+++ b/data/en/projects.json
@@ -22,7 +22,7 @@
     },
     {
       "title": "Börse Stuttgart Digital Exchange",
-      "role": "Freelance JavaScript Consultant",
+      "role": "Freelance Technical Frontend Lead",
       "date": "December 2019 – March 2021",
       "text": [
         "In my role as Technical Frontend Lead for BSDEX, a spinoff of Börse Stuttgart (Stuttgart Stock Exchange), my first task was coordinating the handover of their trading web platform as it was passed from an external service provider to an internal team. Following the handover I continued as an active member of the team, developing new features and continuously improving and enhancing the adopted codebase."
